# models/book.go
@@ -1,0 +1,8 @@
+package models
+
+type Book struct {
+	Name       string `json:"name"`
+	CreatedBy  string `json:"created_by"`
+	ModifiedBy string `json:"modified_by"`
+	State      int    `json:"state"`
+}
